# state-observation

./: CMakeLists.txt
bindings/python/: CMakeLists.txt
bindings/python/include/state-observation/flexibility-estimation/python/: ekf-flexibility-estimator-base.hpp  fixed-contact-ekf-flex-estimator-imu.hpp  flexibility-estimator-base.hpp
bindings/python/include/state-observation/python/: python.hpp
bindings/python/src/: module.cpp  python.cpp
bindings/python/src/flexibility-estimation/: ekf-flexibility-estimator-base.cpp  fixed-contact-ekf-flex-estimator-imu.cpp  flexibility-estimator-base.cpp
bindings/python/src/python/: __init__.py
include/state-observation/flexibility-estimation/: model-base-ekf-flex-estimator-imu.hpp
src/: CMakeLists.txt  model-base-ekf-flex-estimator-imu.cpp
unit-testings/: CMakeLists.txt  test_model-base-ekf-flex-estimator-imu_withComBias_withForcesSensors.cpp
